feat: create headless2 task using modern intellij platform API